Added Karus Crisisbox Youtube Channels.

--- a/Ej.Client/Views/Shared/_Crisisbox_Halt.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_Halt.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     var halt = new List<HaltItem>
     {
-        new HaltItem { Name = "Hungry", ImageFilename = "hunger.webp", Description = "Wanneer heb ik laatst gegeten? Is mijn honger emotioneel of heeft mijn systeem voedsel nodig? Ga voor een vettigheid." },
+        new HaltItem { Name = "Hungry", ImageFilename = "hunger.webp", Description = "Wanneer heb ik laatst gegeten? Is mijn honger emotioneel of heeft mijn systeem voedsel nodig? Ga voor vettigheid: McDonalds, Pizza." },
         new HaltItem { Name = "Angry", ImageFilename = "angry.webp", Description = "Wat ben ik aan het doen dat me gestresseerd maakt? Is het de stress die me boos maakt?" },
         new HaltItem { Name = "Lonely", ImageFilename = "lonely.webp", Description = "Wanneer heb ik voor het laatst iemand gezien? Was dat een positieve of een negatieve ervaring? Bel of WhatsApp iemand." },
         new HaltItem { Name = "Tired", ImageFilename = "tired.webp", Description = "Heb ik genoeg geslapen en mijn systeem de nodige rust gegeven die het verdiend? Relax een beetje. Of kruip gewoon in je nest." }
