--- a/Ej.Client/Views/Shared/_Crisisbox_News_Items.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_News_Items.cshtml
@@ -10,7 +10,7 @@
 <div class="card karus_news_items">
     <div class="card-body">
         <h5>News</h5>
-        <h6>Krantenartikels over situaties die je niet wil meemaken.</h6>
+        <h6 class="text-center">Krantenartikels over situaties die je niet wil meemaken.</h6>
         @if (newsItems?.Count > 0)
         {
             <div class="container m-0 p-0">
