--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -25,6 +25,9 @@
                 <partial name="_Crisisbox_Halt" />
             </div>
             <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_Youtube" />
+            </div>
+            <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_Spotify_Items" 
                          model="@Model.SpotifyMusic" />
             </div>
