--- a/Ej.Client/Views/Karus/Crisisbox/Quotes.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox/Quotes.cshtml
@@ -1,3 +1,21 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Karus_Layout.cshtml";
+    Layout = "~/Views/Shared/_Karus_Layout_Fullscreen.cshtml";
+
+    ViewBag.Title = "Inspirational Quotes";
 }
+
+@model List<Quote>
+
+<div class="container-fluid crisisbox_quotes">
+    <div class="row g-5">
+    @foreach (var quote in Model)
+    {
+        <div class="col col-6" style="width: 10%;">
+            <i class="bi bi-quote"></i>
+            <span class="quote-text">@quote.Text</span>
+            <span class="quote-signature">@quote.GetSignature()</span>
+        </div>
+    }
+    </div>
+</div>
+
