--- a/Ej.Client/Views/Shared/_Crisisbox_Quotes.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_Quotes.cshtml
@@ -6,11 +6,12 @@
     <div class="card-body">
         <div class="card-title">
             <h5>Inspirational Quotes</h5>
-            <i class="bi bi-fullscreen float-end" style="cursor: pointer;" role="link"></i>
+            <a asp-controller="Crisisbox" asp-action="Quotes" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Quotes">
+                <i class="bi bi-fullscreen float-end text-dark" style="cursor: pointer;" role="link"></i>
+            </a>
         </div>
         @if (Model?.Count > 0)
         {
-
             <ul>
                 @foreach (var quote in Model)
                 {
