--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -162,6 +162,9 @@ h6 {
         transition: transform 0.3s ease;
 
         h5 {
+            font-size: 1.5rem;
+            font-weight: bolder;
+
             a {
                 color: var(--bs-gray-700);
                 text-decoration: none;
