Small design changes.

--- a/Ej.Client/Views/Shared/_Crisisbox_CounterGame.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_CounterGame.cshtml
@@ -20,7 +20,7 @@
         </div>
 
         <div class="text-center">
-            <button id="startGame" class="btn btn-primary" disabled>Start Game</button>
+            <button id="startGame" class="btn btn-danger" disabled>Start Game</button>
             <button id="resetGame" class="btn btn-secondary">Reset</button>
         </div>
 
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button id="resetGameFullScreen" class="btn btn-primary">Reset</button>
+                <button id="resetGameFullScreen" class="btn btn-danger">Reset</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Sluiten</button>
             </div>
         </div>
