--- a/Ej.Client/Views/Shared/_Karus_Layout_Fullscreen.cshtml
+++ b/Ej.Client/Views/Shared/_Karus_Layout_Fullscreen.cshtml
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" name="btn-close" data-bs-dismiss="modal">Sluiten</button>
+                    <button type="button" class="btn btn-secondary" name="btn-close" data-bs-dismiss="modal">Sluiten</button>
                 </div>
 
             </div>
