Fixed layout issue on Karus fullscreen layout.

--- a/Ej.Client/Views/Shared/_Karus_Layout.cshtml
+++ b/Ej.Client/Views/Shared/_Karus_Layout.cshtml
@@ -23,7 +23,7 @@
         <meta name="title" content="Karus - @_tenantProvider.Tenant?.Name">
         <meta name="description" content="This is the personal website website of @_tenantProvider.Tenant?.Name and serves as as his minimalistic online presence.">
         <meta name="author" content="Eric Jansen">
-        <meta name="robots" content="follow, index" />
+        <meta name="robots" content="none" />
 
         <!-- Open Graph tags-->
 @{
