--- a/Ej.Client/Views/Shared/_Karus_Layout_Fullscreen.cshtml
+++ b/Ej.Client/Views/Shared/_Karus_Layout_Fullscreen.cshtml
@@ -5,6 +5,13 @@
 <head>
     <meta charset="utf-8" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no">
+    <meta name="title" content="Karus - @_tenantProvider.Tenant?.Name">
+
+    <meta name="author" content="Eric Jansen">
+    <meta name="robots" content="none" />
+
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
