Fixed Mansory grid loading incorrectly.

--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -10,7 +10,9 @@
 <section class="karus karus_crisisbox">
 
     <div class="container p-0">
-        <div class="row g-3 g-md-4 g-lg-5" data-masonry='{"percentPosition": true }'>
+
+        <div class="row g-3 g-md-4 g-lg-5 mansory-grid" name="mansory-grid">
+
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_EmergencyPlans" />
             </div>
@@ -63,6 +65,8 @@
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_CounterGame" />
             </div>
-        </div></div>
+        </div>
+
+     </div>
 
 </section>
