--- a/Ej.Client/Views/Shared/_Karus_Layout.cshtml
+++ b/Ej.Client/Views/Shared/_Karus_Layout.cshtml
@@ -75,19 +75,18 @@
         <script src="~/js/karus.moneycounter.min.js" asp-append-version="true"></script>
         
         <script>
-
-        if (document.getElementById("karus_countergame")) {
+            if (document.getElementById('mansory-grid')) {
         
-            Promise.all(Array.from(document.images)
-                .filter(img => !img.complete)
-                .map(img => new Promise(resolve => { img.onload = img.onerror = resolve; })))
-                .then(() => {
-                 var msnry = new Masonry('.mansory-grid');
-                     msnry.layout();
-                });
-        }
-            
+                Promise.all(Array.from(document.images)
+                    .filter(img => !img.complete)
+                    .map(img => new Promise(resolve => { img.onload = img.onerror = resolve; })))
+                    .then(() => {
+                     var msnry = new Masonry('.mansory-grid');
+                         msnry.layout();
+                    });
+            }
         </script>
+
     </body>
 
 </html>
