--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -11,7 +11,7 @@
 
     <div class="container p-0">
 
-        <div class="row g-3 g-md-4 g-lg-5 mansory-grid" id="mansory-grid">
+        <div class="row g-3 g-md-4 g-lg-5 crisisbox-grid" id="crisisbox-grid">
 
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_EmergencyPlans" />
